# jobbing-assistant

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
src/jobassistant/: config.py  utils.py
src/jobassistant/crawler/: README.md
src/jobassistant/crawler/crawler/: __main__.py
src/jobbing-assistant/: app.py  config.yaml  extract.py  prompts.py  query_engine.py  wikipedia.py
src/jobbing-assistant/crawler/: pyproject.toml
src/jobbing-assistant/crawler/crawler/: routes.py
src/jobbing-assistant/crawler/crawler/storage/datasets/huggingface.co/: page_0.json  page_1.json  page_10.json  page_11.json  page_12.json  page_13.json  page_14.json  page_15.json  page_16.json  page_17.json  page_18.json  page_19.json  page_2.json  page_20.json  page_21.json  page_22.json  page_23.json  page_24.json  page_25.json  page_26.json  page_27.json  page_28.json  page_29.json  page_3.json  page_30.json  page_31.json  page_32.json  page_33.json  page_34.json  page_35.json  page_36.json  page_37.json  page_38.json  page_39.json  page_4.json  page_40.json  page_41.json  page_42.json  page_43.json  page_44.json  (+10 more)
test/: test_app.py  test_extract.py  test_wikipedia.py
tests/: test_app.py  test_extract.py  test_wikipedia.py
