[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jobbing-assistant"
version = "0.1.0"
description = "A job application assistant that helps with CV evaluation, cover letter generation, and CV editing suggestions."
authors = [
    {name = "emre.sar", email = "emresarigol@gmail.com"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "requests",
    "streamlit",
    "llama-index",
    "huggingface_hub",
    "wikipedia-api",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "flake8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py37']

[tool.isort]
profile = "black"
line_length = 100

[tool.flake8]
max-line-length = 100
extend-ignore = "E203, W503"