[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jobbing-assistant"
version = "0.1.0"
description = "A job application assistant that helps with CV evaluation, cover letter generation, and CV editing suggestions."
authors = [
    {name = "emre.sar", email = "emresarigol@gmail.com"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4==4.12.3",
    "llama_index==0.11.2",
    "PyPDF2==3.0.1",
    "requests==2.32.3",
    "streamlit==1.36.0",
    "jsonargparse==4.32.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "flake8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 100

[tool.flake8]
max-line-length = 100
extend-ignore = "E203, W503"