[tool.poetry]
name = "jobassistant"
version = "0.1.0"
description = "A job application assistant that helps with CV evaluation, cover letter generation, and CV editing suggestions."
authors = ["emre.sar <emresarigol@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "jobassistant", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.4.1"
transformers = "^4.44.2"
llama_index = "^0.11.2"
llama-index-embeddings-huggingface=="^0.3.1"
llama-index-llms-ollama=="^0.3.0"
ollama=="^0.3.2"

beautifulsoup4 = "^4.12.3"
PyPDF2 = "^3.0.1"
requests = "^2.32.3"
streamlit = "^1.36.0"
jsonargparse = "^4.32.1"
pyyaml = "^6.0"
crawlee = {extras = ["beautifulsoup"], version = "^0.3.0"}
pytest = "^7.0"
black = "^23.0"
isort = "^5.0"
flake8 = "^6.0"
mypy = "^1.0"
pre-commit = "^3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.flake8]
max-line-length = 100
extend-ignore = "E203, W503"

[tool.mypy]
ignore_missing_imports = true
strict = true

[tool.pytest.ini_options]
testpaths = ["test"]